--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,12 +10,11 @@ on:
       - src/**
       - bindings/**
       - binding.gyp
-  pull_request:
-    paths:
-      - grammar.js
-      - src/**
-      - bindings/**
-      - binding.gyp
+  pull_request_target:
+    types:
+      - opened
+      - edited
+      - synchronize
 
 jobs:
   test:
