--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     }
   },
   "devDependencies": {
-    "tree-sitter-cli": "~0.21.0-pre-release-1",
+    "tree-sitter-cli": "~0.25.9",
     "prebuildify": "^6.0.0"
   },
   "tree-sitter": [
