--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prebuilds/**",
     "bindings/node/*",
     "queries/*",
-    "src/**"
+    "src/**",
+    "*.wasm"
   ],
   "scripts": {
     "build": "tree-sitter generate",
